# mercode-discord-rpc-windows

./: .gitignore  CMakeLists.txt  Main.cpp
Utils/: StringUtils.cpp  StringUtils.h
